# AutoWeaver

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: README.md  architecture.md  camera-and-comm.md  core-abstractions.md  getting-started.md  known-issues-review-2026-04-07.md  pipeline.md  tasks-and-workflow.md
docs/evo/: 001-motion-engine.md  002-motion-stack.md  003-motion-runtime.md  004-bt-engine.md  005-bt-world-bridge.md
docs/next/: 001-plc-role-downgrade.md  002-bt-engine-collapse-into-action.md  003-world-board-redesign.md  004-action-leaf-design.md  005-action-run-robustness.md  006-dobot-arm-mainline.md
docs/north_star/: dobot-edge-cases.md  dobot-integration-testing.md  world-board-as-rl-trajectory.md
docs/pitfalls/: igh-ethercat-sv660n.md
docs/research/: abb-robot-imaging-platform.md
motion-runtime/: Cargo.toml  build.rs
motion-runtime/examples/: move_test.rs  scan.rs
motion-runtime/src/: lib.rs  main.rs
motion-runtime/src/cia402/: state_machine.rs  types.rs
motion-runtime/src/device/: io_module.rs  manager.rs  mod.rs  motion_axis.rs  types.rs
motion-runtime/src/ethercat/: igh_ffi.rs  master.rs  mod.rs  slave.rs
motion-runtime/src/grpc/: server.rs
proto/: motion.proto
scripts/: install-igh-ethercat.sh
src/autoweaver/: __init__.py
src/autoweaver/camera/: __init__.py  base.py  daheng.py  mock.py
src/autoweaver/comm/: __init__.py  base.py  modbus.py  side_task.py  websocket.py
src/autoweaver/comm/websocket/: __init__.py  client.py  server.py
src/autoweaver/device/: __init__.py
src/autoweaver/device/arm/: __init__.py  base.py  dobot.py  dobot_states.py  mock.py
src/autoweaver/device/arm/_dobot_sdk/: README.md  __init__.py
src/autoweaver/motion_policy/: __init__.py  action.py  blackboard.py  runtime_client.py  tracer.py  world_board.py
src/autoweaver/motion_policy/nodes/: __init__.py  node.py
src/autoweaver/motion_policy/nodes/control/: __init__.py  base.py  fallback.py  parallel.py  premise.py  sequence.py
src/autoweaver/motion_policy/nodes/decorator/: __init__.py  base.py  (+5 more)
src/autoweaver/pipeline/: __init__.py  pipeline.py  types.py
src/autoweaver/pipeline/steps/: __init__.py  capture.py  mask_apply.py  save.py  sharpness.py  tiling.py  yolo_detect.py  yolo_seg.py
src/autoweaver/reactive/: __init__.py  _event_bus.py  _state_machine.py  state_machine.py
src/autoweaver/tasks/: __init__.py  _protocol.py  base.py  protocol.py  retry_capture.py
src/autoweaver/workflow/: __init__.py  engine.py  loader.py
tests/device/arm/: test_action_leaf_with_mock.py  test_dobot.py  test_mock_arm.py
tests/integration/: conftest.py  test_diagnose_controller.py  test_l1_connection.py  test_l2_move_j_no_motion.py  test_l3_small_motion.py  test_l5_bt_e2e.py
tests/motion_policy/: test_action.py  test_action_leaf.py  test_tree_node.py  test_world_board.py
(+5 files in other folders)
