[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoweaver"
version = "0.4.2"
description = "A framework for industrial vision inspection systems"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "opencv-python-headless",
  "pymodbus>=3.11.4",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.0"]
daheng = ["iai-gxipy>=2.0.2407.9061"]
websocket = ["websockets>=12"]

[tool.hatch.build.targets.wheel]
packages = ["src/autoweaver"]
