[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoweaver"
version = "0.4.3"
description = "A framework for industrial vision inspection systems"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "opencv-python-headless",
  "pymodbus>=3.11.4",
  "pyyaml>=6.0",
  "requests>=2.32.5",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.0"]
daheng = ["iai-gxipy>=2.0.2407.9061"]
websocket = ["websockets>=12"]

[tool.hatch.build.targets.wheel]
packages = ["src/autoweaver"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
markers = [
    "integration_safe: real-hardware tests that don't move the arm (run with -m integration_safe)",
    "integration: real-hardware tests that move the arm (run with -m integration; operator must be present)",
]
addopts = "-m 'not integration and not integration_safe'"
asyncio_mode = "auto"
